[workspace]
members = [
  "crates/impcurl-sys",
  "crates/impcurl",
  "crates/impcurl-ws",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
libloading = "0.8"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
