[package]
name = "impcurl-ws"
description = "Async WebSocket client powered by libcurl-impersonate with TLS fingerprint impersonation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["websocket", "impersonate", "tokio", "tls", "fingerprint"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
anyhow.workspace = true
impcurl = { path = "../impcurl", version = "0.1.0" }
impcurl-sys = { path = "../impcurl-sys", version = "0.1.0" }
libc = "0.2"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json.workspace = true
