[package]
name = "impcurl-ws"
description = "Async WebSocket client powered by libcurl-impersonate with TLS fingerprint impersonation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["websocket", "impersonate", "tokio", "tls", "fingerprint"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
anyhow.workspace = true
bytes = "1"
futures-core = "0.3"
futures-sink = "0.3"
impcurl = { path = "../impcurl", version = "1.0.0" }
impcurl-sys = { path = "../impcurl-sys", version = "1.0.0" }
libc = "0.2"
smallvec = "1"
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json.workspace = true
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
