[package]
name = "impcurl"
description = "Safe Rust wrapper for libcurl-impersonate WebSocket handshake, send and recv"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["curl", "impersonate", "websocket", "tls", "fingerprint"]
categories = ["network-programming", "web-programming"]

[dependencies]
impcurl-sys = { path = "../impcurl-sys", version = "0.2.0" }
thiserror.workspace = true
tracing.workspace = true
